syntax = "proto3";

package ai.lzy.v1.portal;

import "ai/lzy/v1/common/slot.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "LzyPortal";
option java_package = "ai.lzy.v1.portal";

message AmazonS3Endpoint {
  string endpoint = 1;
  string accessToken = 2;
  string secretToken = 3;
}

message AzureS3Endpoint {
  string connectionString = 1;
}

message S3Locator {
  string key = 1;
  string bucket = 2;

  oneof endpoint {
    AmazonS3Endpoint amazon = 3;
    AzureS3Endpoint azure = 4;
  }
}

message PortalSlotDesc {
  Slot slot = 1;
  string channelId = 2;

  message Snapshot {
    // external s3 storage
    S3Locator s3 = 1;

    // TODO:
    //  - support whiteboard
    //  - support kafka (streaming)
  }

  message StdOut {
    string taskId = 1;
  }

  message StdErr {
    string taskId = 1;
  }

  oneof kind {
    // snapshot slot to save into external (persistent) and internal volatile portal storage
    Snapshot snapshot = 10;
    // stdout/stderr of tasks (will be combined and transferred to portal stdout/stderr slots)
    StdOut stdout = 11;
    StdErr stderr = 12;
  }
}
